[package]
name = "rcrypto"
version = "0.4.0"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 = { version = "^0.6", optional = true }
rust-crypto = { git = "https://github.com/stafiprotocol/rust-crypto", default-features = false }
bitcoin_hashes = { version = "^0.7", default-features = false }
byteorder = { version = "^1.3", default-features = false }
sp-std = { branch = "master", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

[dev-dependencies]
hex-literal = "^0.2"
hex = "^0.4"

[features]
default = [ "std" ]
std = [
    "bitcoin_hashes/std",
    "byteorder/std",
    "sp-std/std",
    "tiny-bip39",
    "rust-crypto/std",
]