[package]
name = "bridge-common"
version = "0.4.9"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"


[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
sp-std = { branch = "m1-compilation", default-features = false, git = "https://github.com/stafiprotocol/stafi-blockchain.git" }
sp-runtime = { branch = "m1-compilation", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "m1-compilation", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-primitives = { path = "../../../primitives", default-features = false }

# frame dependencies
frame-support = { branch = "m1-compilation", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "m1-compilation", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

bridge-relayers = { path = "../relayers", default-features = false}

[dev-dependencies]
sp-io = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
hex = { version = "0.4", default-features = false}

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
  "bridge-relayers/std",
]
