[package]
name = "bridge-swap"
version = "0.4.5"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"


[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

# primitives
sp-std = { branch = "master", default-features = false, git = "https://github.com/stafiprotocol/stafi-blockchain.git" }
sp-runtime = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-arithmetic = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-primitives = { path = "../../../primitives", default-features = false }

# frame dependencies
frame-support = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

bridge-common = { path = "../common", default-features = false}
rtoken-balances = { path = "../../rtoken/balances", default-features = false}
xtoken-balances = { path = "../../xtoken/balances", default-features = false}

[dev-dependencies]
sp-io = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-balances = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "bridge-common/std",
  "rtoken-balances/std",
  "xtoken-balances/std",
]
