[package]
name = "general-signature"
version = "0.4.9"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"


[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
# primitives
sp-std = { branch = "master", default-features = false, git = "https://github.com/stafiprotocol/stafi-blockchain.git" }
sp-runtime = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# frame dependencies
frame-support = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

node-primitives = { path = "../../../primitives", default-features = false }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-io/std",
  "frame-support/std",
  "frame-system/std",
]
